fix styling to modal title does not overlap description

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -648,7 +648,6 @@ body {
 
 .issue-modal-title {
   margin: 18px 0px 0px -8px;
-  height: 44px;
   width: 100%;
 }
 
